# internal/handlers/v1/email_login_handler.go
@@ -8,6 +8,7 @@ import (
 	"auth/internal/services"
 	"auth/lib/email"
 	"auth/lib/event_listener"
+	log2 "auth/lib/log"
 	"errors"
 	"fmt"
 	"github.com/gin-gonic/gin"
@@ -16,25 +17,25 @@ import (
 	"time"
 )
 
+type RegisterByMailInput struct {
+	Name     string `json:"name" binding:"required" example:"dean"`
+	Email    string `json:"email" binding:"required" example:"dean.test@gmail.com"`
+	Password string `json:"password" binding:"required" example:"!AS$GK())"`
+}
+
 // RegisterByMail godoc
 // @Summary Register an account by email
 // @Description Using email to register an account
 // @Tags E-mail
 // @Accept  json
 // @Produce  json
-// @Param name body string true "User name wants to register"
-// @Param email body string true "User email"
-// @Param password body string true "User password"
-// @Success 200 {string}  {"status":200, msg:"ok"}
-// @Failure 400,404
+// @Param JSON body RegisterByMailInput true "User data"
+// @Success 200 {object} helpers.ResponseContent string "{"status":200, "msg":ok}"
+// @Failure 400 {object} helpers.ResponseContent string "40022:validation failed, 400009: already registered"
 // @Failure 500
 // @Router /api/v1/email/register [post]
 func RegisterByMail(c *gin.Context) {
-	var input struct {
-		Name     string `json:"name" binding:"required"`
-		Email    string `json:"email" binding:"required"`
-		Password string `json:"password" binding:"required"`
-	}
+	var input RegisterByMailInput
 	if err := c.ShouldBindJSON(&input); err != nil {
 		helpers.GenerateResponse(c, helpers.ReturnValidationFailed, nil)
 		return
@@ -59,6 +60,7 @@ func RegisterByMail(c *gin.Context) {
 		return
 	}
 
+	log2.Info(fmt.Sprintf("activate token : %s", token), c)
 	dispatcher := c.MustGet("Dispatcher").(*event_listener.Dispatcher)
 	dispatcher.DispatchAsync(events.EmailRegisteredEvent{User: *user, Token: token})
 
@@ -66,11 +68,24 @@ func RegisterByMail(c *gin.Context) {
 	return
 }
 
+type VerifyMailLoginInput struct {
+	Email    string `json:"email" binding:"required" example:"dean.test@gmail.com"`
+	Password string `json:"password" binding:"required" example:"!AS$GK())"`
+}
+
+// VerifyMailLogin godoc
+// @Summary Get login token by email
+// @Description Using email to receive a login token
+// @Tags E-mail
+// @Accept  json
+// @Produce  json
+// @Param JSON body VerifyMailLoginInput true "login data"
+// @Success 200 {object} helpers.ResponseContent string "{"status":200, "msg":ok}"
+// @Failure 400 {object} helpers.ResponseContent string "40004:user not found, 40000: email not verified yet"
+// @Failure 500
+// @Router /api/v1/email/verify [post]
 func VerifyMailLogin(c *gin.Context) {
-	var input struct {
-		Email    string `json:"email" binding:"required"`
-		Password string `json:"password" binding:"required"`
-	}
+	var input VerifyMailLoginInput
 	if err := c.ShouldBindJSON(&input); err != nil {
 		helpers.GenerateResponse(c, helpers.ReturnValidationFailed, nil)
 		return
@@ -80,7 +95,7 @@ func VerifyMailLogin(c *gin.Context) {
 	token, err := services.EmailVerify(input.Email, input.Password, db)
 	if err != nil {
 		if errors.Is(err, services.ErrorUserNotFound) {
-			helpers.GenerateResponse(c, helpers.ReturnNotExist, nil)
+			helpers.GenerateResponse(c, helpers.ReturnNotExist, map[string]string{"detail": err.Error()})
 			return
 		}
 
@@ -92,10 +107,23 @@ func VerifyMailLogin(c *gin.Context) {
 	return
 }
 
-func ActivateEmailRegister(c *gin.Context) {
-	var input struct {
-		Token string `json:"token"`
-	}
+type ActivateEmailInput struct {
+	Token string `json:"token"`
+}
+
+// ActivateEmail godoc
+// @Summary activate email
+// @Description activate email
+// @Tags E-mail
+// @Accept  json
+// @Produce  json
+// @Param token query ActivateEmailInput true "email authentication token"
+// @Success 200 {object} helpers.ResponseContent string "{"status":200, "msg":ok}"
+// @Failure 400 {object} helpers.ResponseContent string "40022:validation failed , 40102: token expired, 40101: unknown token invalid error"
+// @Failure 500
+// @Router /api/v1/email/verify [get]
+func ActivateEmail(c *gin.Context) {
+	var input ActivateEmailInput
 	if err := c.ShouldBindQuery(&input); err != nil {
 		helpers.GenerateResponse(c, helpers.ReturnValidationFailed, nil)
 		return
